--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.bluelinelabs</groupId>
-            <artifactId>logansquare-compiler</artifactId>
-            <version>1.3.7</version>
-            <scope>test</scope>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
         </dependency>
     </dependencies>
 </project>
