--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,13 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
             <version>1.0.4</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
