--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.teleport-json</groupId>
+    <groupId>org.huslcolors</groupId>
     <artifactId>husl</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>husl</name>
-    <url>http://maven.apache.org</url>
+
+    <name>HUSL</name>
+    <description>Human-friendly HSL</description>
+    <url>http://www.husl-colors.org</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/husl-colors/husl-java</url>
+        <connection>scm:git:git://github.com/husl-colors/husl-java.git</connection>
+        <developerConnection>scm:git:git@github.com:husl-colors/husl-java.git</developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <email>alexei@boronine.com</email>
+            <name>Alexei Boronine</name>
+            <url>http://www.boronine.com</url>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -27,4 +53,28 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
