[maven-release-plugin] prepare release husl-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.huslcolors</groupId>
     <artifactId>husl</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>HUSL</name>
     <description>Human-friendly HSL</description>
@@ -23,7 +22,8 @@
         <url>https://github.com/husl-colors/husl-java</url>
         <connection>scm:git:git://github.com/husl-colors/husl-java.git</connection>
         <developerConnection>scm:git:git@github.com:husl-colors/husl-java.git</developerConnection>
-    </scm>
+      <tag>husl-1.0</tag>
+  </scm>
 
     <developers>
         <developer>
