[maven-release-plugin] prepare release husl-1.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.husl-colors</groupId>
     <artifactId>husl</artifactId>
     <packaging>jar</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <name>HUSL</name>
     <description>Human-friendly HSL</description>
@@ -23,7 +22,7 @@
         <url>https://github.com/husl-colors/husl-java</url>
         <connection>scm:git:git://github.com/husl-colors/husl-java.git</connection>
         <developerConnection>scm:git:git@github.com:husl-colors/husl-java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>husl-1.1</tag>
     </scm>
 
     <developers>
@@ -65,7 +64,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.6</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
