--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.hsluv</groupId>
     <artifactId>hsluv</artifactId>
     <packaging>jar</packaging>
-    <version>0.3</version>
+    <version>1.0</version>
 
     <name>hsluv</name>
     <description>Human-friendly HSL</description>
@@ -46,12 +47,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -121,8 +116,8 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <keyname>0xD54740FB</keyname>
-                            <passphraseServerId>0xD54740FB</passphraseServerId>
+                            <keyname>EBFD22439E5C59D664D0CFC750617B51F61187C2</keyname>
+                            <passphraseServerId>EBFD22439E5C59D664D0CFC750617B51F61187C2</passphraseServerId>
                             <gpgArguments>
                                 <arg>--pinentry-mode</arg>
                                 <arg>loopback</arg>
